# misc

docs/: howto.txt  repos.txt  tips.txt
dwm/: config.h  dwm
extra/gplugin/files/gplugin/: .hg_archival.txt  .hgtags  COPYRIGHT  ChangeLog  HACKING.OSX  INSTALL.md  README.md  convey.yml  meson.build  meson_options.txt
extra/gplugin/files/gplugin/gplugin/: gplugin-core.c  gplugin-loader-tests.c  gplugin-loader.c  gplugin-loader.h  gplugin-manager.c  gplugin-manager.h  gplugin-native-loader.c  gplugin-native-plugin.c  gplugin-native-plugin.h  gplugin-options.c  gplugin-plugin-info.c  gplugin-plugin-info.h  gplugin-plugin.c  gplugin-plugin.h  gplugin-private.h  gplugin-version.c  gplugin-version.h.in  meson.build
extra/gplugin/files/gplugin/gplugin-gtk/: gplugin-gtk-plugin-info.c  gplugin-gtk-plugin-info.h  gplugin-gtk-store.c  gplugin-gtk-store.h  gplugin-gtk-view.c  gplugin-gtk-view.h  gplugin-gtk.h.in  gplugin-gtk.xml.in  meson.build
extra/gplugin/files/gplugin/gplugin-gtk-viewer/: gplugin-gtk-viewer-window.c  gplugin-gtk-viewer-window.h  gplugin-gtk-viewer.c  meson.build
extra/gplugin/files/gplugin/gplugin-gtk-viewer/data/: gplugin-gtk-viewer.gresource.xml  window.ui
extra/gplugin/files/gplugin/gplugin-gtk/data/: gplugin-gtk.gresource.xml  plugin-info.ui
extra/gplugin/files/gplugin/gplugin-gtk/reference/: gplugin-gtk.toml.in  meson.build  urlmap.js
extra/gplugin/files/gplugin/gplugin-query/: gplugin-query.c
extra/gplugin/files/gplugin/gplugin/reference/: genie.md  gplugin.toml.in  lua.md  meson.build  native-plugins.md  perl5.md  python3.md  vala.md
extra/gplugin/files/gplugin/gplugin/share/: meson.build
extra/gplugin/files/gplugin/gplugin/tests/: meson.build  test-bind-global.c  test-core.c  test-dynamic-type.c  test-find-plugins.c  test-id-collision.c  test-id-normalize.c  test-load-on-query.c  test-loader-registration.c  test-loader.c  test-native-loader.c  test-newest-version.c  test-option-group.c  test-plugin-info.c  test-plugin-manager-paths.c  test-signals.c  test-unresolved-symbol.c  test-version-compare.c  test-versioned-dependencies.c
extra/gplugin/files/gplugin/gplugin/tests/bad-plugins/: query-error.c
extra/gplugin/files/gplugin/gplugin/tests/bind-global/: bind-global.c
extra/gplugin/files/gplugin/gplugin/tests/dynamic-type/: dynamic-type-provider.c  dynamic-type-user.c
extra/gplugin/files/gplugin/gplugin/tests/id-collision/: id-collision1.c  id-collision2.c
extra/gplugin/files/gplugin/gplugin/tests/load-on-query-fail/: load-on-query-fail.c  meson.build
extra/gplugin/files/gplugin/gplugin/tests/load-on-query-pass/: load-on-query-pass.c  meson.build
extra/gplugin/files/gplugin/gplugin/tests/newest-version/: meson.build  multiple-semantic-1.0.0.c  multiple-semantic-1.1.0.c  no-version-and-semantic-no-version.c  no-version-and-semantic-semantic.c  non-semantic-and-semantic-non-semantic.c  non-semantic-and-semantic-semantic.c  solo-no-version.c  solo-non-semantic.c
extra/gplugin/files/gplugin/gplugin/tests/plugins/: basic-plugin.c  broken-dependent-plugin.c  dependent-plugin.c  load-exception.c  load-failed.c  meson.build  unload-failed.c
extra/gplugin/files/gplugin/gplugin/tests/unresolved-symbol/: unresolved-symbol.c
extra/gplugin/files/gplugin/gplugin/tests/versioned-dependencies/: bar.c  baz.c  exact1.c  exact2.c  fez.c  greater-equal.c  greater.c  less-equal.c  less.c  meson.build  no-version.c  super-dependent.c
extra/gplugin/files/gplugin/lua/: gplugin-lua-core.c  gplugin-lua-loader.c  gplugin-lua-plugin.c  meson.build
extra/gplugin/files/gplugin/lua/tests/: meson.build  test-lua-loader.c
extra/gplugin/files/gplugin/lua/tests/plugins/: basic.lua  dependent.lua  load-exception.lua  load-failed.lua  unload-failed.lua
extra/gplugin/files/gplugin/packaging/: gplugin.spec.in  meson.build
extra/gplugin/files/gplugin/packaging/debian/: changelog  control  copyright  gir1.2-gplugin-1.0.install  gir1.2-gplugin-gtk-1.0.install  libgplugin-dev.install  libgplugin-gtk-bin.install  libgplugin-gtk-dev.install  libgplugin-gtk0.install  libgplugin-lua.install  libgplugin-perl5.install  libgplugin-python3.install  libgplugin0-bin.install  libgplugin0.install  rules
extra/gplugin/files/gplugin/packaging/mingw-cross/: PKGBUILD
extra/gplugin/files/gplugin/perl5/: gplugin-perl5-core.c  gplugin-perl5-loader.c  gplugin-perl5-loader.h  gplugin-perl5-plugin.c  gplugin-perl5-plugin.h  meson.build
extra/gplugin/files/gplugin/perl5/tests/: meson.build  test-perl5-loader.c
extra/gplugin/files/gplugin/perl5/tests/plugins/: basic.pl  dependent.pl  load-exception.pl  load-failed.pl  unload-failed.pl
extra/gplugin/files/gplugin/po/: POTFILES  meson.build
extra/gplugin/files/gplugin/python3/: gplugin-python3-core.c  gplugin-python3-loader.c  gplugin-python3-plugin.c  gplugin-python3-test-pygobject.c  gplugin-python3-utils.c  meson.build
extra/gplugin/files/gplugin/python3/tests/: meson.build  test-python3-loader.c  test-python3-utils.c
extra/gplugin/files/gplugin/python3/tests/plugins/: basic.py  dependent.py  load-exception.py  load-failed.py  unload-failed.py
extra/gplugin/files/gplugin/rust/: meson.build
extra/gplugin/files/gplugin/rust/tests/: meson.build  test-rust-loading.c
extra/gplugin/files/gplugin/rust/tests/plugins/: meson.build
extra/gplugin/files/gplugin/tcc/: gplugin-tcc-core.c  gplugin-tcc-loader.c  gplugin-tcc-loader.h  gplugin-tcc-plugin.c  gplugin-tcc-plugin.h  meson.build
extra/gplugin/files/gplugin/tcc/tests/: meson.build  test-tcc-loader.c
extra/gplugin/files/gplugin/tcc/tests/plugins/: basic-plugin.c  dependent.c  load-exception.c  load-failed.c  unload-failed.c
extra/gplugin/files/gplugin/vala/: meson.build
extra/gplugin/files/gplugin/vala/tests/: meson.build  test-genie-loading.c  test-vala-loading.c
extra/gplugin/files/gplugin/vala/tests/genie-plugins/: basic.gs  dependent.gs  load-exception.gs  load-failed.gs  meson.build  unload-failed.gs
extra/gplugin/files/gplugin/vala/tests/plugins/: basic.vala  dependent.vala  load-exception.vala  load-failed.vala  meson.build  unload-failed.vala
(+382 files in other folders)
