option(
	'doc',
	type : 'boolean', value : true, yield : true,
	description : 'build documentation with gtk-doc'
)

option(
	'introspection',
	type : 'boolean', value : true, yield : true,
	description : 'Whether or not to build a GObject Introspection type library'
)

option(
	'gtk3',
	type : 'boolean', value : true,
	description : 'Whether or not to build the gtk3 library'
)

option(
	'help2man',
	type : 'boolean', value : true,
	description : 'Whether or not to build man pages from --help output'
)

option(
	'install-gplugin-gtk-viewer',
	type : 'boolean', value : true,
	description : 'Whether or not to install the gtk viewer application'
)

option(
	'install-gplugin-query',
	type : 'boolean', value : true,
	description : 'Whether or not to install the query application'
)

option(
	'lua',
	type : 'boolean', value : true,
	description : 'Whether or not to build the Lua plugin loader'
)

option(
	'nls',
	type : 'boolean', value : true,
	description : 'Install translation files'
)

option(
	'perl5',
	type : 'boolean', value : true,
	description : 'Whether or not to build the Perl plugin loader'
)

option(
	'python3',
	type : 'boolean', value : true,
	description : 'Whether or not to build the Python 3.x plugin loader'
)

option(
	'rs',
	type : 'boolean', value : false,
	description : 'Whether or not to create the rust bindings.'
)

option(
	'tcc',
	type : 'boolean', value : false,
	description : 'Whether or not to build the TCC plugin loader'
)

option(
	'vapi',
	type : 'boolean', value : true,
	description : 'Whether or not to build vapi files for gplugin'
)
