shared_module('multiple-semantic-1.0.0', 'multiple-semantic-1.0.0.c',
	name_prefix : '',
	dependencies : [gplugin_dep, GLIB])

shared_module('multiple-semantic-1.1.0', 'multiple-semantic-1.1.0.c',
	name_prefix : '',
	dependencies : [gplugin_dep, GLIB])

shared_module('no-version-and-semantic-no-version',
	'no-version-and-semantic-no-version.c',
	name_prefix : '',
	dependencies : [gplugin_dep, GLIB])

shared_module('no-version-and-semantic-semantic',
	'no-version-and-semantic-semantic.c',
	name_prefix : '',
	dependencies : [gplugin_dep, GLIB])

shared_module('non-semantic-and-semantic-non-semantic',
	'non-semantic-and-semantic-non-semantic.c',
	name_prefix : '',
	dependencies : [gplugin_dep, GLIB])

shared_module('non-semantic-and-semantic-semantic',
	'non-semantic-and-semantic-semantic.c',
	name_prefix : '',
	dependencies : [gplugin_dep, GLIB])

shared_module('solo-no-version', 'solo-no-version.c',
	name_prefix : '',
	dependencies : [gplugin_dep, GLIB])

shared_module('solo-non-semantic', 'solo-non-semantic.c',
	name_prefix : '',
	dependencies : [gplugin_dep, GLIB])
