shared_library('basic-plugin', 'basic-plugin.c',
	name_prefix : '',
	dependencies : [gplugin_dep, GLIB])

shared_library('dependent-plugin', 'dependent-plugin.c',
	name_prefix : '',
	dependencies : [gplugin_dep, GLIB])

shared_library('broken-dependent-plugin', 'broken-dependent-plugin.c',
	name_prefix : '',
	dependencies : [gplugin_dep, GLIB])

shared_library('load-failed', 'load-failed.c',
	name_prefix : '',
	dependencies : [gplugin_dep, GLIB])

shared_library('load-exception', 'load-exception.c',
	name_prefix : '',
	dependencies : [gplugin_dep, GLIB])

shared_library('unload-failed', 'unload-failed.c',
	name_prefix : '',
	dependencies : [gplugin_dep, GLIB])
