shared_library('super-dependent', 'super-dependent.c',
	name_prefix : '',
	dependencies : [gplugin_dep, GLIB])

shared_library('no-version', 'no-version.c',
	name_prefix : '',
	dependencies : [gplugin_dep, GLIB])

shared_library('exact1', 'exact1.c',
	name_prefix : '',
	dependencies : [gplugin_dep, GLIB])

shared_library('exact2', 'exact2.c',
	name_prefix : '',
	dependencies : [gplugin_dep, GLIB])

shared_library('greater', 'greater.c',
	name_prefix : '',
	dependencies : [gplugin_dep, GLIB])

shared_library('greater-equal', 'greater-equal.c',
	name_prefix : '',
	dependencies : [gplugin_dep, GLIB])

shared_library('less', 'less.c',
	name_prefix : '',
	dependencies : [gplugin_dep, GLIB])

shared_library('less-equal', 'less-equal.c',
	name_prefix : '',
	dependencies : [gplugin_dep, GLIB])

shared_library('bar', 'bar.c',
	name_prefix : '',
	dependencies : [gplugin_dep, GLIB])

shared_library('baz', 'baz.c',
	name_prefix : '',
	dependencies : [gplugin_dep, GLIB])

shared_library('fez', 'fez.c',
	name_prefix : '',
	dependencies : [gplugin_dep, GLIB])
